# esquema

./: .gitignore  Cargo.toml  README.md
esquema-cli/: .gitignore  Cargo.toml
esquema-cli/src/: main.rs
esquema-codegen/: Cargo.toml
esquema-codegen/src/: generator.rs  lib.rs  schema.rs  token_stream.rs
esquema-codegen/tests/lexicons/dev/baileytownsend/: steps.json
esquema-example/: .env.template  Cargo.toml  README.md  build.rs
esquema-example/lexicons/: status.json
esquema-example/lexicons/dev/baileytownsend/: weeklySteps.json
esquema-example/lexicons/dev/baileytownsend/graph/bar/: getBar.json
esquema-example/src/: lib.rs  main.rs
esquema-example/src/lexicons/: dev.rs  record.rs
esquema-example/src/lexicons/dev/: baileytownsend.rs
esquema-example/src/lexicons/dev/baileytownsend/: graph.rs  steps.rs  weekly_steps.rs
esquema-example/src/lexicons/dev/baileytownsend/graph/: bar.rs
esquema-example/src/lexicons/dev/baileytownsend/graph/bar/: get_bar.rs
esquema-example/src/lexicons/xyz/statusphere/: status.rs
esquema-validator/: Cargo.toml
