[workspace]
members = ["esquema-cli", "esquema-codegen", "esquema-example", "esquema-validator"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/fatfingers23/esquema"
license = "MIT"
keywords = ["atproto", "bluesky"]


[workspace.dependencies]
anyhow = "1.0.97"
atrium-api = "0.25.2"
atrium-common = "0.1.1"
atrium-identity = "0.1.3"
atrium-oauth = "0.1.1"
atrium-xrpc-client = "0.5.13"
esquema-codegen = { version = "0.1.0", path = "esquema-codegen" }
atrium-lex = { git = "https://github.com/sugyan/atrium.git", rev = "f162f815a04b5ecb0421b390d521c883c41d5f75" }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
