[package]
name = "esquema-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
atrium-api.workspace = true
atrium-common.workspace = true
atrium-identity.workspace = true
atrium-oauth.workspace = true
atrium-xrpc-client.workspace = true
clap = { version = "4.4.18", features = ["derive"] }
esquema-codegen.workspace = true
tokio.workspace = true
serde.workspace = true
hickory-resolver = "0.24.1"
log = "0.4.26"