[package]
name = "esquema-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-lex.workspace = true

# Serde
serde = "1.0.160"
serde_json = "1.0.96"
serde_repr = "0.1.12"
serde_with = "2.3.2"

# Proc macros
heck = "0.4.1"
itertools = "0.10.5"
prettyplease = "0.2.15"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
